Comment chart_values

--- a/chart_values.yml
+++ b/chart_values.yml
@@ -1,4 +1,4 @@
-rbac:
+/* rbac:
   create: true
           
 controller:
@@ -23,3 +23,4 @@ controller:
         if ($http_x_forwarded_proto != 'https') {
           return 301 https://$host$request_uri;
         }
+*/   
