--- a/web.yaml
+++ b/web.yaml
@@ -1,46 +1,34 @@
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: pipeline-demo
-
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app: web
-  name: web
-  namespace: pipeline-demo
+  name: spring-petclinic-deployment
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      app: web
+      app: spring-petclinic
+  replicas: 3
   template:
     metadata:
       labels:
-        app: web
+        app: spring-petclinic
     spec:
       containers:
-      - image: df7854c892e3/web:<TAG>
-        imagePullPolicy: Always
-        name: web
+      - name: spring-petclinic
+        image: df7854c892e3/web:<TAG>
+        ports:
+        - containerPort: 80
 
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: web
-  name: web
-  namespace: pipeline-demo
+  name: spring-petclinic-service
 spec:
-  ports:
-  - nodePort: 32223
-    port: 80
-    protocol: TCP
-    targetPort: 80
+  type: LoadBalancer
   selector:
-    app: web
-  type: NodePort
+    app: spring-petclinic
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
